syntax = "proto3";


package sysmon;

option go_package = "/sysmon";

service SysmonData {
  rpc SendSysmonDataToClient (QueryParam) returns (stream Data);
}

message QueryParam {
  int32 every_m = 1;
  int32 average_n = 2;
}

message Data {
  bytes data =1;
}
